# lethallink

./: .gitignore  README.md  TODO
docs/: DM_Design_Notes.md  PSU_Design_Notes.txt
docs/cad/: debug_module.slvs  debug_module.slvs~
docs/eda/: lethallink.dcm  lethallink.lib
docs/eda/lethallink.pretty/: lethallink_debug_module.kicad_mod  lethallink_debug_module_mount.kicad_mod
hardware/: PARTS.md
hardware/boards/: AUXControl.sch  AUXControl.sch-bak  BootConfig.sch  DDR3Cache.sch  DebugInterface.sch  DebugInterface.sch-bak  ExternalInterface.sch  ExternalInterface.sch-bak  ICPower.sch  ICPower.sch-bak  LPDDR3Cache.sch  MechanicalGraphic.sch  PCIe-Interface.sch  PCIe-Interface.sch-bak  PowerSupply.sch  USB3Interface.sch  USB3Interface.sch-bak  _autosave-lethallink.kicad_pcb  _autosave-lethallink.sch  fp-info-cache  lethallink-cache.lib  lethallink.kicad_pcb  lethallink.kicad_pcb-bak  lethallink.pro  lethallink.sch  lethallink.sch-bak
hardware/boards/host_card/: AUXControl.sch  BootConfig.sch  DDR3Cache.sch  DebugInterface.sch  ExternalInterface.sch  ICPower.sch  MechanicalGraphic.sch  PCIe-Interface.sch  USB3Interface.sch  fp-info-cache  fp-lib-table  lethallink-cache.lib  lethallink.kicad_pcb  lethallink.pro  lethallink.sch  sym-lib-table
software/: meson.build
software/gateware/: lethallink.py  meson.build
software/gateware/lethallink/: board.py  resources.py
